<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.MovieActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:src="@drawable/starwars"
                android:scaleType="fitXY"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textSize="16sp"
                android:background="@color/white"
                android:padding="8dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="18dp"/>
        </FrameLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="14dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textStyle="bold"
                android:textSize="16sp"/>
            
            <Space
                android:layout_width="wrap_content"
                android:layout_height="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textSize="12sp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/title_release"
                            android:textSize="12sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/release_date"
                            android:textSize="12sp"/>
                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/title_director"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/director"
                        android:textSize="12sp"/>
                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/title_produce"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/produce"
                        android:textSize="12sp"/>
                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp"/>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/title_cast"
                        android:textSize="12sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="150dp"
                        android:text="@string/cast"
                        android:textSize="12sp"/>
                </TableRow>
            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starwars"
                    android:scaleType="fitXY"/>
                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="191dp"
                        android:layout_marginBottom="34dp"
                        android:text="Indonesia"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="37dp"
                        android:layout_marginEnd="171dp"
                        android:layout_marginBottom="9dp"
                        android:text="22 Agustus 2019"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starwars"
                    android:scaleType="fitXY"/>
                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="191dp"
                        android:layout_marginBottom="34dp"
                        android:text="Indonesia"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="37dp"
                        android:layout_marginEnd="171dp"
                        android:layout_marginBottom="9dp"
                        android:text="22 Agustus 2019"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starwars"
                    android:scaleType="fitXY"/>
                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="191dp"
                        android:layout_marginBottom="34dp"
                        android:text="Indonesia"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="37dp"
                        android:layout_marginEnd="171dp"
                        android:layout_marginBottom="9dp"
                        android:text="22 Agustus 2019"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starwars"
                    android:scaleType="fitXY"/>
                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="191dp"
                        android:layout_marginBottom="34dp"
                        android:text="Indonesia"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="37dp"
                        android:layout_marginEnd="171dp"
                        android:layout_marginBottom="9dp"
                        android:text="22 Agustus 2019"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/starwars"
                    android:scaleType="fitXY"/>
                <Space
                    android:layout_width="12dp"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="191dp"
                        android:layout_marginBottom="34dp"
                        android:text="Indonesia"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="37dp"
                        android:layout_marginEnd="171dp"
                        android:layout_marginBottom="9dp"
                        android:text="22 Agustus 2019"
                        android:textSize="10sp" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</ScrollView>